@@ -198,8 +198,8 @@ class #{node.klass}: #{Array(node.klass).first.columns.keys.join(', ')}
             else_markup.set_dyn_param('href', '<%= logout_path %>')
 
             markup.set_dyn_param('href', '<%= login_path %>')
-            unless markup.param[:rel]
-              markup.set_param('rel', 'nofollow')
+            unless markup.params[:rel]
+              markup.set_param(:rel, 'nofollow')
             end
 
             out markup.wrap(expand_if("visitor.is_anon?", self.node, else_markup))
