@@ -20,7 +20,7 @@ login_link:
     # Forces NodesController type of url and params
     fake_controller: 'nodes'
   src: "<r:login_link/>"
-  res: '<a href="/oo/projects-list/Clean-Water-project/page22.html">login</a>'
+  res: '<a href="/oo/projects-list/Clean-Water-project/page22.html" rel="nofollow">login</a>'
 
 logout_link_other_controller:
   src: "<r:login_link/>"
@@ -30,7 +30,7 @@ login_link_other_controller:
   context:
     visitor: 'anon'
   src: "<r:login_link/>"
-  res: '<a href="/login">login</a>'
+  res: '<a href="/login" rel="nofollow">login</a>'
 
 login_link_with_blocks:
   src: "<r:login_link>ONE ONE<r:else do='title'/></r:login_link>"
@@ -40,7 +40,7 @@ login_link_with_blocks_not_logged_in:
   context:
     visitor: 'anon'
   src: "<r:login_link><r:title/><r:else do='title'/></r:login_link>"
-  res: "<a href='/login'>status title</a>"
+  res: "<a rel='nofollow'  href='/login'>status title</a>"
 
 visitor_link_not_logged_in:
   context:
